--- a/src/application/Main.fxml
+++ b/src/application/Main.fxml
@@ -1,7 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	
+
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-	
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
-	<!-- TODO Add Nodes -->
+<?import javafx.scene.text.Font?>
+
+
+<BorderPane prefHeight="325.0" prefWidth="511.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1" fx:controller="application.MainController">
+   <center>
+      <BorderPane prefHeight="392.0" prefWidth="510.0" BorderPane.alignment="CENTER">
+         <center>
+            <AnchorPane prefHeight="323.0" prefWidth="447.0" BorderPane.alignment="CENTER">
+               <children>
+                  <TextField fx:id="pathTextField" layoutX="79.0" layoutY="87.0" prefHeight="26.0" prefWidth="350.0" />
+                  <Label layoutX="131.0" layoutY="42.0" text="Ingresa la dirección del archivo">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="234.0" layoutY="133.0" mnemonicParsing="false" onAction="#read" text="Leer" />
+                  <Label fx:id="result" layoutX="79.0" layoutY="254.0" prefHeight="20.0" prefWidth="162.0" text="Resultado:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+         </center>
+      </BorderPane>
+   </center>
 </BorderPane>
