--- a/src/application/Main.fxml
+++ b/src/application/Main.fxml
@@ -7,23 +7,25 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane prefHeight="325.0" prefWidth="511.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1" fx:controller="application.MainController">
+<BorderPane prefHeight="325.0" prefWidth="511.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
    <center>
       <BorderPane prefHeight="392.0" prefWidth="510.0" BorderPane.alignment="CENTER">
          <center>
-            <AnchorPane prefHeight="323.0" prefWidth="447.0" BorderPane.alignment="CENTER">
+            <AnchorPane prefHeight="323.0" prefWidth="447.0" style="-fx-background-color: #7bf610;" BorderPane.alignment="CENTER">
                <children>
-                  <TextField fx:id="pathTextField" layoutX="79.0" layoutY="87.0" prefHeight="26.0" prefWidth="350.0" />
-                  <Label layoutX="131.0" layoutY="42.0" text="Ingresa la dirección del archivo">
+                  <TextField fx:id="pathTextField" layoutX="79.0" layoutY="87.0" prefHeight="26.0" prefWidth="350.0" style="-fx-border-color: blue;" />
+                  <Label layoutX="131.0" layoutY="42.0" text="Ingresa la dirección del archivo" textFill="#0f22d5">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Button layoutX="234.0" layoutY="133.0" mnemonicParsing="false" onAction="#read" text="Leer" />
-                  <Label fx:id="result" layoutX="79.0" layoutY="254.0" prefHeight="20.0" prefWidth="162.0" text="Resultado:">
+                  <Button layoutX="234.0" layoutY="133.0" mnemonicParsing="false" onAction="#read" style="-fx-background-color: blue;" text="Leer" textFill="WHITE">
                      <font>
                         <Font size="14.0" />
+                     </font></Button>
+                  <Label fx:id="result" layoutX="79.0" layoutY="190.0" prefHeight="20.0" prefWidth="162.0" text="Resultado:" textFill="#161df8">
+                     <font>
+                        <Font size="24.0" />
                      </font>
                   </Label>
                </children>
